--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "settingizer",
-  "version": "1.9.3",
-  "description": "Create settings pages from JSON objects",
+  "version": "1.9.4",
+  "description": "Create settings pages from JavaScript objects",
   "main": "dist/settingizer.js",
   "scripts": {
     "test": "mocha"
